--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
+    "postcss-flexbugs-fixes": "^5.0.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "@types/node": "^13.11.0",
